--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
+<body>  
+  <div class="container">
   <h1>셋삼 스튜디오</h1>
   <p>셋삼 스튜디오는 그래픽, 물성, 감각이라는<br />세 가지 씨앗에서 출발하는 디자인 스튜디오입니다.</p>
   <a class="email-link" href="mailto:your@email.com">✉️ 이메일 남기기</a>
+</div>
 </body>
 </html>
