--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>  
   <div class="container">
-  <h1>셋삼 스튜디오</h1>
-  <p>셋삼 스튜디오는 그래픽, 물성, 감각이라는<br />세 가지 씨앗에서 출발하는 디자인 스튜디오입니다.</p>
+  <h1>셋삼</h1>
+  <p>Our design range that touches three or more (people or other). Prefer work that grows naturally with small rules, in line with relationships</p>
   <a class="email-link" href="mailto:your@email.com">✉️ 이메일 남기기</a>
 </div>
 </body>
