--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>셋삼 스튜디오</title>
+  <title>셋삼</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- 웹폰트 Pretendard -->
-  <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" rel="stylesheet" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Noto+Sans+KR:wght@100;200;300;400;500;700&display=swap" rel="stylesheet">
   <!-- 외부 스타일 연결 -->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +17,7 @@
   <div class="container">
   <h1>셋삼</h1>
   <p>Our design range that touches three or more (people or other). Prefer work that grows naturally with small rules, in line with relationships</p>
-  <a class="email-link" href="mailto:your@email.com">✉️ 이메일 남기기</a>
+  <a class="email-link" href="mailto:setsam.range@gmail.com">✉️ setsam.range@gmail.com</a>
 </div>
 </body>
 </html>
